switching all data, without proper commits, from damaged laptop

--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,13 @@
-@import "tailwindcss";
-/* *{
-    margin: 0;
-    padding: 0;
-} */
 
-input[type="number"]::-webkit-inner-spin-button,
+/* @import "tailwindcss"; */
+
+@import "tailwindcss/theme";
+@import "tailwindcss/preflight";
+@import "tailwindcss/utilities";
+
+
+/* input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
-}
+} */
